--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -47,6 +47,7 @@
     "react-native.config.js",
     "React.podspec",
     "React",
+    "!React/Fabric/RCTThirdPartyFabricComponentsProvider.*",
     "ReactAndroid",
     "ReactCommon",
     "README.md",
